Fix drop zone z-index
Drop zone was appearing over most page elements except positioned ones
and focused ones, due to not having an explicit z-index.

--- a/index.css
+++ b/index.css
@@ -209,6 +209,7 @@ button:active {
     background-color: var(--bg);
 	border: 0.1rem dashed var(--fg);
     transition: visibility 1s, opacity 1s cubic-bezier(0.25, 1, 0.25, 1);
+    z-index: 9;
 }
 
 #trujaman_dropzone[data-state="hidden"] {
